# rccar

./: .gitignore  RC-CAR.sct  README.md  default.amxmi
Amalthea models/: RCCarProject_binary_timing_analysisv3linux.xlsx  amaltheaModelFromRoverSrcC.amxmi  rccar080.amxmi  rccar_072.amxmi  rccar_072_ESSP(AA,Tags,Pairings).amxmi  rccar_080.amxmi  rccar_080_CPP.amxmi  rccar_080_ESSP(AA,Tags,Pairings).amxmi  rccar_080_v2MO.amxmi  rover080.amxmi
Amalthea models/HardwareModels/: A4MCAR_HLM_Hw_Model.amxmi  A4MCAR_LLM_Hw_Model.amxmi
Amalthea models/LowLevelModels/: A4MCAR_LLM_Model.amxmi
Amalthea models/task_precedence_sysml/: task2.eap  task_precedence.eap
App/: local.properties
Documentation/: Documentation_RCCAR.docx.doc
IDAACS Paper/: IDAACS.cls  IDAACS_Example.aux  IDAACS_Example.bbl  IDAACS_Example.blg  IDAACS_Example.dvi  IDAACS_Example.tcp  IDAACS_Example.tex  IDAACS_Example.tps  pgfplot.tex  ref.bib
RC-Car Slides for EclipseCon/: ~$EclipseCon2016_RCcar_FHDO_v3.pptx
RCCarProject/: .cproject  .project  Makefile  README.rst
RaspberryPiBluezServer/: README  bluez_server  bluez_server.c  bluez_server.h
RaspberryPiFiles/: readme.txt
RaspberryPiFiles/a4mcar/high_level_applications/apps/image_processing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  how_to_run.txt  image_processing  image_processing.cpp
model/: rccar.amxmi  rccar_hw.amxmi
version0/: Makefile
version1/: swstup-n0v0-595d150c
version2/: .cproject  LICENSE.txt  Makefile  RCCarProject.vcd  RCCarProject_binary_timing_analysisv2_outdated.xlsx  xscope.xmt
(+1143 files in other folders)
